--- a/employee/templates/employee/show.html
+++ b/employee/templates/employee/show.html
@@ -43,6 +43,6 @@
 </table>
 <br>
 <br>
-<center><a href="/emp" class="btn btn-primary">Add New Record</a></center>
+<center><a href="{% url 'emp' %}" class="btn btn-primary">Add New Record</a></center>
 </body>
 </html>
